# Plants-Evolution

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  PlantsEvolution[1]_include.cmake  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp
src/Display/: CMakeLists.txt  Display.cpp  Turtle.cpp
src/Display/include/: Display.hpp  Turtle.hpp
src/EvolutionaryAlgorithm/: CMakeLists.txt
src/LSystem/: CMakeLists.txt  LSystem.cpp  Rule.cpp
src/LSystem/include/: LSystem.hpp  Rule.hpp
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
test/: CMakeLists.txt  main_test.cpp
